improve: analyse page, editor, add: unitbar, fix: scrollbar

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -8,6 +8,16 @@ html {
   box-sizing: inherit;
 }
 
+html {
+  overflow: auto;
+  scrollbar-width: none; /* For Firefox */
+}
+
+html::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
+
+
 body,
 h1,
 h2,
